# whisper-server

./: README.md  main.py  pyproject.toml  whisper_wrapper.py
